// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`文字排版 快照测试 基本文字排版 1`] = `
<h2
  className="sc-bdVaJa kyyDHF sinoui-typography sinoui-typography--h2"
  color="textPrimary"
  type="h2"
>
  H2
</h2>
`;

exports[`文字排版 快照测试 设置属性 1`] = `
Array [
  <h2
    className="sc-bdVaJa kyyDHF sinoui-typography sinoui-typography--h2"
    color="textPrimary"
    type="h2"
  >
    H2
  </h2>,
  <h2
    className="sc-bdVaJa lcfZRk sinoui-typography sinoui-typography--h2"
    color="textPrimary"
    type="h2"
  >
    H2
  </h2>,
  <h2
    className="sc-bdVaJa jtadph sinoui-typography sinoui-typography--h2"
    color="textPrimary"
    type="h2"
  >
    H2
  </h2>,
  <h2
    className="sc-bdVaJa gYOFuV sinoui-typography sinoui-typography--h2"
    color="success"
    type="h2"
  >
    H2
  </h2>,
  <h2
    className="sc-bdVaJa dnWbTy sinoui-typography sinoui-typography--h2 sinoui-typography--gutter-bottom"
    color="textPrimary"
    type="h2"
  >
    H2
  </h2>,
]
`;

exports[`文字排版 快照测试 颜色设置 1`] = `
Array [
  <h2
    className="sc-bdVaJa kyyDHF sinoui-typography sinoui-typography--h2"
    color="textPrimary"
    type="h2"
  >
    H2
  </h2>,
  <h2
    className="sc-bdVaJa fqJqTL sinoui-typography sinoui-typography--h2"
    color="primary"
    type="h2"
  >
    H2
  </h2>,
  <h2
    className="sc-bdVaJa eXoLwk sinoui-typography sinoui-typography--h2"
    color="secondary"
    type="h2"
  >
    H2
  </h2>,
  <h2
    className="sc-bdVaJa kyyDHF sinoui-typography sinoui-typography--h2"
    color="textPrimary"
    type="h2"
  >
    H2
  </h2>,
  <h2
    className="sc-bdVaJa fbNmtK sinoui-typography sinoui-typography--h2"
    color="textSecondary"
    type="h2"
  >
    H2
  </h2>,
  <h2
    className="sc-bdVaJa QFMTO sinoui-typography sinoui-typography--h2"
    color="error"
    type="h2"
  >
    H2
  </h2>,
  <h2
    className="sc-bdVaJa kVnEOn sinoui-typography sinoui-typography--h2"
    color="warning"
    type="h2"
  >
    H2
  </h2>,
  <h2
    className="sc-bdVaJa gYOFuV sinoui-typography sinoui-typography--h2"
    color="success"
    type="h2"
  >
    H2
  </h2>,
  <h2
    className="sc-bdVaJa iFsHvP sinoui-typography sinoui-typography--h2"
    color="info"
    type="h2"
  >
    H2
  </h2>,
]
`;
